# Web-Stream

./: README.md
WebStreamAndroidSdk/: .gitignore  AndroidSdkBluePrint.md  settings.gradle
WebStreamAndroidSdk/app/: build.gradle
WebStreamAndroidSdk/app/src/: main.rar
WebStreamAndroidSdk/app/src/main/: AndroidManifest.xml
WebStreamAndroidSdk/app/src/main/res/layout/: activity_camera_recording.xml  activity_camera_recording_glview.xml  activity_join_call.xml  activity_main.xml
WebStreamAndroidSdk/app/src/main/res/values/: strings.xml  themes.xml
WebStreamAndroidSdk/app/src/main/res/values-night/: themes.xml
WebStreamAndroidSdk/gradle/: libs.versions.toml
WebStreamAndroidSdk/gradle/wrapper/: gradle-wrapper.properties
WebStreamAndroidSdk/webstream-sdk/: build.gradle
WebStreamAndroidSdk/webstream-sdk/src/main/: AndroidManifest.xml
WebStreamAndroidSdk/webstream-sdk/src/main/cpp/: CMakeLists.txt  README.md  webstream_h264.cpp  webstream_jxl.cpp  webstream_jxl_stub.cpp
WebStreamAndroidSdk/webstream-sdk/src/main/cpp/webstream_h264/: common.cpp  common.h  decoder_state.cpp  decoder_state.h  encoder_state.cpp  encoder_state.h  jni_bindings.cpp  yuv_image.cpp  yuv_image.h
WebStreamNodeServer/: README.md  open-server_push_release.bat  package-lock.json  package.json
WebStreamNodeServer/src/: server.js
example_implementation/VideoAPIChecker/: .gitignore  README.md  settings.gradle
example_implementation/VideoAPIChecker/app/: build.gradle
example_implementation/VideoAPIChecker/app/src/main/: AndroidManifest.xml
example_implementation/VideoAPIChecker/app/src/main/res/drawable/: bg_call_bottom_scrim.xml  bg_call_setup_panel.xml  bg_local_video_frame.xml
example_implementation/VideoAPIChecker/app/src/main/res/layout/: activity_agora.xml  activity_hundred_ms.xml  activity_image_conversion.xml  activity_jpeg_bitmap_jxl.xml  activity_main.xml  activity_video_conversion.xml  activity_video_sdk.xml  activity_web_stream.xml
example_implementation/VideoAPIChecker/app/src/main/res/values/: strings.xml  (+1 more)
example_implementation/VideoAPIChecker/app/src/main/res/values-night/: themes.xml
example_implementation/VideoAPIChecker/gradle/: libs.versions.toml
example_implementation/VideoAPIChecker/gradle/wrapper/: gradle-wrapper.properties
(+56 files in other folders)
